Removed un-needed packages, optimization, and added new content to index.html and main.js

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/reveal.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/theme/league.css">
@@ -11,8 +12,24 @@
 <body>
     <div class="reveal">
         <div class="slides">
-            <section>Slide 1</section>
-            <section>Slide 2</section>
+        <section data-state="titlePage"><div class="r-frame"><h2>Plant Pathogens - How to Stop Their Spread in Merced County</h2><hr><h4>By: Timothy Wallis</h4></div></section>
+            <section data-transition="convex" data-state="agendaPage"><div class="r-frame"><h3 style="text-decoration: underline;">Agenda</h3>
+                <div class="agendaList">
+                        <p>1. Background</p>
+                        <p>2. Current Issues</p>
+                        <p>3. Proposed Solutions</p>
+                        <p>4. Conclusion and Q&A</p>
+                </div></div>
+            </section>
+            <section data-state="backgroundPage"><h3 style="text-decoration: underline;">Background</h3>
+                <ul class="backgroundInfo">
+                    <li>Pathogens are organisms that cause disease</li>
+                    <li>Common plant pathogens include fungi, bacteria, viruses, and nematodes</li>
+                    <li>They can spread through soil, water, air, and human activity</li>
+                    <li>Specific nematodes target Almond Trees</li>
+                    <li>This leads to loss in gross income in Merced County</li>
+                </ul>
+            </section>
         </div>
     </div>
 
