complete background info

--- a/index.html
+++ b/index.html
@@ -22,13 +22,19 @@
                 </div></div>
             </section>
             <section data-state="backgroundPage"><h3 style="text-decoration: underline;">Background</h3>
+            <div class="backgroundContent">
                 <ul class="backgroundInfo">
                     <li>Pathogens are organisms that cause disease</li>
                     <li>Common plant pathogens include fungi, bacteria, viruses, and nematodes</li>
                     <li>They can spread through soil, water, air, and human activity</li>
-                    <li>Specific nematodes target Almond Trees</li>
+                    <li>Canker Disease targets almond trees</li>
                     <li>This leads to loss in gross income in Merced County</li>
                 </ul>
+                <div>
+                    <label for="backgroundImage">Figure 1: Almond Tree Affected by Canker Disease</label>
+                    <img src="assets/images/IMG_1427.jpg" alt="Almond Tree with Canker Disease" id="backgroundImage">
+                </div>
+            </div>
             </section>
         </div>
     </div>
