Added currentIssueList to slides

--- a/index.html
+++ b/index.html
@@ -26,14 +26,28 @@
                 <ul class="backgroundInfo">
                     <li>Pathogens are organisms that cause disease</li>
                     <li>Common plant pathogens include fungi, bacteria, viruses, and nematodes</li>
-                    <li>They can spread through soil, water, air, and human activity</li>
+                    <li>Spread through soil, water, air, and human activity</li>
                     <li>Canker Disease targets almond trees</li>
-                    <li>This leads to loss in gross income in Merced County</li>
                 </ul>
                 <div>
                     <label for="backgroundImage">Figure 1: Almond Tree Affected by Canker Disease</label>
                     <img src="assets/images/IMG_1427.jpg" alt="Almond Tree with Canker Disease" id="backgroundImage">
                 </div>
+            </div>
+            </section>
+            <section data-state="currentIssuesPage">
+            <h3 style="text-decoration: underline;">Current Issues</h3>
+            <div class="currentIssueContent">
+                <ul class="currentIssuesList">
+                    <li>Significant crop losses in Merced County due to plant pathogens</li>
+                    <li>Economic impact on local farmers and the agricultural sector</li>
+                    <li>Lack of awareness and education on pathogen prevention</li>
+                    <li>Limited access to effective treatment options</li>
+                </ul>
+            <div>
+                <label for="currentIssuesImage">Figure 2: Infected Crops in Merced County</label>
+                <img src="assets/images/1000_F_295653210_GC1m2STxdoZ6gX1As0vODJm8WPwPmIIt.jpg" alt="Economic Fall" id="currentIssuesImage">
+            </div>
             </div>
             </section>
         </div>
