--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     <li>Limited access to effective treatment options</li>
                 </ul>
             <div>
-                <label for="currentIssuesImage">Figure 2: Infected Crops in Merced County</label>
+                <label for="currentIssuesImage">Figure 2: Economic Fall - If Continued</label>
                 <img src="assets/images/1000_F_295653210_GC1m2STxdoZ6gX1As0vODJm8WPwPmIIt.jpg" alt="Economic Fall" id="currentIssuesImage">
             </div>
             </div>
