update to display.

--- a/index.html
+++ b/index.html
@@ -17,18 +17,23 @@
             <section data-transition="convex" data-state="agendaPage"><div class="r-frame"><h3 style="text-decoration: underline;">Agenda</h3>
                 <div class="agendaList">
                         <p>1. Background</p>
-                        <p>2. Current Issues</p>
-                        <p>3. Proposed Solutions</p>
-                        <p>4. Conclusion and Q&A</p>
+                        <p>2. Transmissions of Plant Pathogens</p>
+                        <p>3. Risk Factors in Merced County</p>
+                        <p>4. Current Issues</p>
+                        <p>5. Prevention measures</p>
+                        <p>6. How farmers can help</p>
+                        <p>7. Proposed Solutions</p>
+                        <p>8. Conclusion and Q&A</p>
+                        <p>9. References</p>
                 </div></div>
             </section>
             <section data-state="backgroundPage"><h3 style="text-decoration: underline;">Background</h3>
-            <div class="backgroundContent">
+            <div class="container">
                 <ul class="backgroundInfo">
                     <li>Pathogens are organisms that cause disease</li>
                     <li>Common plant pathogens include fungi, bacteria, viruses, and nematodes</li>
                     <li>Spread through soil, water, air, and human activity</li>
-                    <li>Canker Disease targets almond trees</li>
+                    <li>Canker disease targets almond trees</li>
                 </ul>
                 <div>
                     <label for="backgroundImage">Figure 1: Almond Tree Affected by Canker Disease</label>
@@ -36,9 +41,39 @@
                 </div>
             </div>
             </section>
+            <section data-state="transmsissionPage">
+                <div class="container">
+                    <h3>Transmissions of Plant Pathogens</h3>
+                    <ul class="transmsissionList">
+                        <li>Soil: Contaminated soil can harbor pathogens that infect plants</li>
+                        <li>Water: Irrigation water can spread pathogens between plants</li>
+                        <li>Air: Wind can carry spores and other airborne pathogens</li>
+                        <li>Human Activity: Movement of infected plants and tools can introduce pathogens to new areas</li>
+                    </ul>
+                    <div>
+                        <label for="transmsissionImage">Figure 3: Pathogen Transmission Methods</label>
+                        <img src="assets/images/Pathogen_Transmission_Methods.jpg" alt="TODO!" id="transmsissionImage">
+                    </div>
+                </div>
+            </section>
+            <section data-state="riskFactorsPage">
+            <h3 style="text-decoration: underline;">Risk Factors in Merced County</h3>
+            <div class="container">
+                <ul class="riskFactorsList">
+                    <li>High agricultural activity increases the likelihood of pathogen spread</li>
+                    <li>Climate conditions such as humidity and temperature can favor pathogen growth</li>
+                    <li>Lack of crop rotation can lead to soil-borne pathogens accumulating</li>
+                    <li>Insufficient monitoring and early detection systems</li>
+                </ul>
+            </div>
+            <div>
+                <label for="riskFactorsImage">Figure 4: Merced County Almond Orchards</label>
+                <img src="assets/images/merced_county_image_overview.jpg" alt="Merced County Almond Orchards" id="riskFactorsImage">
+            </div>
+            </section>
             <section data-state="currentIssuesPage">
             <h3 style="text-decoration: underline;">Current Issues</h3>
-            <div class="currentIssueContent">
+            <div class="container">
                 <ul class="currentIssuesList">
                     <li>Significant crop losses in Merced County due to plant pathogens</li>
                     <li>Economic impact on local farmers and the agricultural sector</li>
@@ -49,6 +84,20 @@
                 <label for="currentIssuesImage">Figure 2: Economic Fall - If Continued</label>
                 <img src="assets/images/1000_F_295653210_GC1m2STxdoZ6gX1As0vODJm8WPwPmIIt.jpg" alt="Economic Fall" id="currentIssuesImage">
             </div>
+            </div>
+            </section>
+            <section data-state="worksCited">
+            <h3 style="text-decoration: underline;">Works Cited</h3>
+            <div class="container">
+                <ul>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                <li></li>
+                </ul>
             </div>
             </section>
         </div>
