--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/reset.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/reveal.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/theme/league.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reveal.js@5.2.1/dist/theme/league.css">
 </head>
 <body>
     <div class="reveal">
@@ -51,7 +51,7 @@
                         <li>Human Activity: Movement of infected plants and tools can introduce pathogens to new areas</li>
                     </ul>
                     <div>
-                        <label for="transmsissionImage">Figure 3: Pathogen Transmission Methods</label>
+                        <label for="transmsissionImage">Figure 2: Pathogen Transmission Methods</label>
                         <img src="assets/images/Pathogen_Transmission_Methods.jpg" alt="TODO!" id="transmsissionImage">
                     </div>
                 </div>
@@ -65,11 +65,12 @@
                     <li>Lack of crop rotation can lead to soil-borne pathogens accumulating</li>
                     <li>Insufficient monitoring and early detection systems</li>
                 </ul>
+                <div>
+                    <label for="riskFactorsImage">Figure 3: Merced County Almond Orchards</label>
+                    <img src="assets/images/merced_county_image_overview.jpg" alt="Merced County Almond Orchards" id="riskFactorsImage">
+                </div>
             </div>
-            <div>
-                <label for="riskFactorsImage">Figure 4: Merced County Almond Orchards</label>
-                <img src="assets/images/merced_county_image_overview.jpg" alt="Merced County Almond Orchards" id="riskFactorsImage">
-            </div>
+
             </section>
             <section data-state="currentIssuesPage">
             <h3 style="text-decoration: underline;">Current Issues</h3>
@@ -81,10 +82,68 @@
                     <li>Limited access to effective treatment options</li>
                 </ul>
             <div>
-                <label for="currentIssuesImage">Figure 2: Economic Fall - If Continued</label>
+                <label for="currentIssuesImage">Figure 4: Economic Fall - If Continued</label>
                 <img src="assets/images/1000_F_295653210_GC1m2STxdoZ6gX1As0vODJm8WPwPmIIt.jpg" alt="Economic Fall" id="currentIssuesImage">
             </div>
             </div>
+            </section>
+            <section data-state="preventionMeasuresPage">
+            <h3 style="text-decoration: underline;">Prevention Measures</h3>
+            <div class="container">
+                <ul class="preventionMeasuresList">
+                    <li>Implement crop rotation to reduce soil-borne pathogens</li>
+                    <li>Use disease-resistant plant varieties</li>
+                    <li>Regularly monitor and inspect crops for early signs of disease</li>
+                    <li>Sanitize tools and equipment to prevent pathogen spread</li>
+                </ul>
+                <div>
+                    <label for="preventionMeasuresImage">Figure 5: Preventing Methods</label>
+                    <img src="" alt="Preventing Methods" id="preventionMeasuresImage">
+                </div>
+            </div>
+            </section>
+            <section data-state="howFarmersCanHelpPage">
+            <h3 style="text-decoration: underline;">How Farmers Can Help</h3>
+                <div class="container">
+                    <ul class="famerHelpList">
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <div>
+                        <label for="howFarmersCanHelpImage">Figure 6: Farmers Helping</label>
+                        <img src="" alt="farmersHelping" id="howFarmersCanHelpImage">
+                    </div>
+                </div>
+            </section>
+            <section data-state="proposedSolutionsPage">
+            <h3 style="text-decoration: underline;">Proposed Solutions</h3>
+                <div class="container">
+                    <div></div>
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                </div>
+            </section>
+            <section data-state="conclusionAndQAPage">
+                <h3 style="text-decoration:underline;">Conclusion</h3>
+                <div class="container">
+                    <ul>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                        <li></li>
+                    </ul>
+                    <div><label for="conclusionandQ&A"></label><img src="" alt="Conclusion Q&A"></div>
+                </div>
             </section>
             <section data-state="worksCited">
             <h3 style="text-decoration: underline;">Works Cited</h3>
@@ -102,7 +161,6 @@
             </section>
         </div>
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/reveal.js@4.3.1/dist/reveal.min.js" type="module"></script>
     <script src="main.js" type="module"></script>
 </body>
