fulfillment of text competition for empty params, excluding resources

--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
             <h3 style="text-decoration: underline;">Prevention Measures</h3>
             <div class="container">
                 <ul class="preventionMeasuresList">
-                    <li>Implement crop rotation to reduce soil-borne pathogens</li>
-                    <li>Use disease-resistant plant varieties</li>
-                    <li>Regularly monitor and inspect crops for early signs of disease</li>
-                    <li>Sanitize tools and equipment to prevent pathogen spread</li>
+                    <li>Management of Contaminated crops by county</li>
+                    <li>Assistance from home owners</li>
+                    <li>Management of water</li>
+                    <li>Management of farming equipment emissions</li>
                 </ul>
                 <div>
                     <label for="preventionMeasuresImage">Figure 5: Preventing Methods</label>
@@ -106,12 +106,11 @@
             <h3 style="text-decoration: underline;">How Farmers Can Help</h3>
                 <div class="container">
                     <ul class="famerHelpList">
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Sanitize tools and equipment</li>
+                        <li>Regularly monitor and inspect crops for early signs of disease</li>
+                        <li>Implement crop rotation</li>
+                        <li>Different methods of Irrigation</li>
+                        <li>Handling of Contaminated crops</li>
                     </ul>
                     <div>
                         <label for="howFarmersCanHelpImage">Figure 6: Farmers Helping</label>
@@ -124,11 +123,11 @@
                 <div class="container">
                     <div></div>
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Current Budget: $1000</li>
+                        <li>Zoom Webinars: $89 / month</li>
+                        <li>Posters bought from Adobe Express: $343 / 100 posters</li>
+                        <li>Multiple zoom webinars over months</li>
+                        <li>Contributions make more webinars and posters</li>
                     </ul>
                 </div>
             </section>
@@ -136,11 +135,11 @@
                 <h3 style="text-decoration:underline;">Conclusion</h3>
                 <div class="container">
                     <ul>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
-                        <li></li>
+                        <li>Preventing plant pathogen spread</li>
+                        <li>Assistance of Farmers</li>
+                        <li>Assistance from home owners</li>
+                        <li>Management of infected biproducts of plants</li>
+                        <li>Spread awareness for help</li>
                     </ul>
                     <div><label for="conclusionandQ&A"></label><img src="" alt="Conclusion Q&A"></div>
                 </div>
