Update of images/modification

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         <li>Management of infected biproducts of plants</li>
                         <li>Spread awareness for help</li>
                     </ul>
-                    <div><label for="conclusionandQ&A"></label><img src="" alt="Conclusion Q&A"></div>
+                    <div><label for="conclusionandQ&A">Figure 8: Conclusion</label><img src="assets/images/conclusion.png" alt="Conclusion" id="conclusionandQ&A"></div>
                 </div>
             </section>
             <section data-state="worksCited">
