Modification to style, completed image building

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <p>5. Prevention measures</p>
                         <p>6. How farmers can help</p>
                         <p>7. Proposed Solutions</p>
-                        <p>8. Conclusion and Q&A</p>
+                        <p>8. Conclusion</p>
                         <p>9. References</p>
                 </div></div>
             </section>
@@ -33,27 +33,29 @@
                     <li>Pathogens are organisms that cause disease</li>
                     <li>Common plant pathogens include fungi, bacteria, viruses, and nematodes</li>
                     <li>Spread through soil, water, air, and human activity</li>
-                    <li>Canker disease targets almond trees</li>
+                    <li>Canker disease targets almond trees (Holland)</li>
                 </ul>
                 <div>
-                    <label for="backgroundImage">Figure 1: Almond Tree Affected by Canker Disease</label>
+                    <label for="backgroundImage">Figure 1: Almond Trees Affected by Canker Disease</label>
                     <img src="assets/images/IMG_1427.jpg" alt="Almond Tree with Canker Disease" id="backgroundImage">
+                    <img src="assets/images/cankerdisease2.jpeg" alt="Almond Tree with Canker Disease Closeup" id="backgroundImage">
                 </div>
             </div>
             </section>
             <section data-state="transmsissionPage">
+                <h3>Transmissions of Plant Pathogens</h3>
                 <div class="container">
-                    <h3>Transmissions of Plant Pathogens</h3>
+                    <div>
+                        <label for="transmsissionImage">Figure 2: Pathogen Transmission Methods</label>
+                        <img src="assets/images/transmissions.jpeg" alt="Transmission methods image" id="transmsissionImage">
+                    </div>
                     <ul class="transmsissionList">
                         <li>Soil: Contaminated soil can harbor pathogens that infect plants</li>
                         <li>Water: Irrigation water can spread pathogens between plants</li>
                         <li>Air: Wind can carry spores and other airborne pathogens</li>
                         <li>Human Activity: Movement of infected plants and tools can introduce pathogens to new areas</li>
                     </ul>
-                    <div>
-                        <label for="transmsissionImage">Figure 2: Pathogen Transmission Methods</label>
-                        <img src="assets/images/Pathogen_Transmission_Methods.jpg" alt="TODO!" id="transmsissionImage">
-                    </div>
+
                 </div>
             </section>
             <section data-state="riskFactorsPage">
@@ -65,26 +67,29 @@
                     <li>Lack of crop rotation can lead to soil-borne pathogens accumulating</li>
                     <li>Insufficient monitoring and early detection systems</li>
                 </ul>
-                <div>
+                <div id="riskFactorsDiv">
                     <label for="riskFactorsImage">Figure 3: Merced County Almond Orchards</label>
                     <img src="assets/images/merced_county_image_overview.jpg" alt="Merced County Almond Orchards" id="riskFactorsImage">
+
                 </div>
+                <img src="assets/images/merced_county_overview_farm.jpeg" alt="Merced County Almond Orchards Overview" id="riskFactorsImage" class="overviewImage">
             </div>
 
             </section>
             <section data-state="currentIssuesPage">
             <h3 style="text-decoration: underline;">Current Issues</h3>
             <div class="container">
+                <div>
+                    <label for="currentIssuesImage">Figure 4: Economic Fall - If Continued</label>
+                    <img src="assets/images/1000_F_295653210_GC1m2STxdoZ6gX1As0vODJm8WPwPmIIt.jpg" alt="Economic Fall" id="currentIssuesImage">
+                </div>
                 <ul class="currentIssuesList">
                     <li>Significant crop losses in Merced County due to plant pathogens</li>
                     <li>Economic impact on local farmers and the agricultural sector</li>
                     <li>Lack of awareness and education on pathogen prevention</li>
                     <li>Limited access to effective treatment options</li>
                 </ul>
-            <div>
-                <label for="currentIssuesImage">Figure 4: Economic Fall - If Continued</label>
-                <img src="assets/images/1000_F_295653210_GC1m2STxdoZ6gX1As0vODJm8WPwPmIIt.jpg" alt="Economic Fall" id="currentIssuesImage">
-            </div>
+
             </div>
             </section>
             <section data-state="preventionMeasuresPage">
@@ -98,13 +103,17 @@
                 </ul>
                 <div>
                     <label for="preventionMeasuresImage">Figure 5: Preventing Methods</label>
-                    <img src="" alt="Preventing Methods" id="preventionMeasuresImage">
+                    <img src="assets/images/prevention.jpeg" alt="Preventing Methods" id="preventionMeasuresImage">
                 </div>
             </div>
             </section>
             <section data-state="howFarmersCanHelpPage">
             <h3 style="text-decoration: underline;">How Farmers Can Help</h3>
                 <div class="container">
+                    <div>
+                        <label for="howFarmersCanHelpImage">Figure 6: Farmers Helping</label>
+                        <img src="assets/images/howfarmershelp.jpeg" alt="farmersHelping" id="howFarmersCanHelpImage">
+                    </div>
                     <ul class="famerHelpList">
                         <li>Sanitize tools and equipment</li>
                         <li>Regularly monitor and inspect crops for early signs of disease</li>
@@ -112,10 +121,7 @@
                         <li>Different methods of Irrigation</li>
                         <li>Handling of Contaminated crops</li>
                     </ul>
-                    <div>
-                        <label for="howFarmersCanHelpImage">Figure 6: Farmers Helping</label>
-                        <img src="" alt="farmersHelping" id="howFarmersCanHelpImage">
-                    </div>
+
                 </div>
             </section>
             <section data-state="proposedSolutionsPage">
@@ -147,14 +153,8 @@
             <section data-state="worksCited">
             <h3 style="text-decoration: underline;">Works Cited</h3>
             <div class="container">
-                <ul>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
-                <li></li>
+                <ul class="worksCitedList">
+                <li>Holland, Leslie A., et al. “Fungal Pathogens Associated with Canker Diseases of Almond in California”, <i>The American Phytopathological Society</i>, 23 December 2020, https://doi.org/10.1094/PDIS-10-19-2128-RE, Accessed 13 November 2025.  </li>
                 </ul>
             </div>
             </section>
