modified css to match up to spec.

--- a/index.html
+++ b/index.html
@@ -14,18 +14,19 @@
     <div class="reveal">
         <div class="slides">
         <section data-state="titlePage"><div class="r-frame"><h2>Plant Pathogens - How to Stop Their Spread in Merced County</h2><hr><h4>By: Timothy Wallis</h4></div></section>
-            <section data-transition="convex" data-state="agendaPage"><div class="r-frame"><h3 style="text-decoration: underline;">Agenda</h3>
-                <div class="agendaList">
-                        <p>1. Background</p>
-                        <p>2. Transmissions of Plant Pathogens</p>
-                        <p>3. Risk Factors in Merced County</p>
-                        <p>4. Current Issues</p>
-                        <p>5. Prevention measures</p>
-                        <p>6. How farmers can help</p>
-                        <p>7. Proposed Solutions</p>
-                        <p>8. Conclusion</p>
-                        <p>9. References</p>
-                </div></div>
+            <section data-transition="convex" data-state="agendaPage"><div class="r-frame"><h3 style="text-decoration: underline;">Agenda</h3><ol class="agendaContent">
+                    <div><li>Background</li>
+                        <li>Transmissions of Plant Pathogens</li>
+                        <li>Risk Factors in Merced County</li>
+                        <li>Current Issues</li></div>
+                        <div>
+                            <li>Prevention measures</li>
+                            <li>How farmers can help</li>
+                            <li>Proposed Solutions</li>
+                            <li>Conclusion</li>
+                        </div>
+                        
+                </ol><li style="font-size: 2rem !important; margin-bottom: 2rem; font-family: 'Quicksand', sans-serif !important;">9. References</li></div>
             </section>
             <section data-state="backgroundPage"><h3 style="text-decoration: underline;">Background</h3>
             <div class="container">
@@ -125,14 +126,18 @@
                 </div>
             </section>
             <section data-state="proposedSolutionsPage">
-            <h3 style="text-decoration: underline;">Proposed Solutions</h3>
+            <h3 style="text-decoration: underline;">Proposed Solution</h3>
                 <div class="container">
                     <div></div>
-                    <ul>
+                    <ul style="list-style: none; text-align: center;">
                         <li>Current Budget: $1000</li>
+                        <br>
                         <li>Zoom Webinars: $89 / month</li>
+                        <br>
                         <li>Posters bought from Adobe Express: $343 / 100 posters</li>
+                        <br>
                         <li>Multiple zoom webinars over months</li>
+                        <br>
                         <li>Contributions make more webinars and posters</li>
                     </ul>
                 </div>
