--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                             <li>Conclusion</li>
                         </div>
                         
-                </ol><li style="font-size: 2rem !important; margin-bottom: 2rem; font-family: 'Quicksand', sans-serif !important;">9. References</li></div>
+                </ol><li style="font-size: 2rem !important; margin-bottom: 2rem; font-family: 'Quicksand', sans-serif !important;list-style:none;">9. References</li></div>
             </section>
             <section data-state="backgroundPage"><h3 style="text-decoration: underline;">Background</h3>
             <div class="container">
