final fixes + bug fixes

--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
     <div class="reveal">
         <div class="slides">
         <section data-state="titlePage"><div class="r-frame"><h2>Plant Pathogens - How to Stop Their Spread in Merced County</h2><hr><h4>By: Timothy Wallis</h4></div></section>
+        <section data-state="hookPage">
+        </section>
             <section data-transition="convex" data-state="agendaPage"><div class="r-frame"><h3 style="text-decoration: underline;">Agenda</h3><ol class="agendaContent">
                     <div><li>Background</li>
                         <li>Transmissions of Plant Pathogens</li>
@@ -28,6 +30,7 @@
                         
                 </ol><li style="font-size: 2rem !important; margin-bottom: 2rem; font-family: 'Quicksand', sans-serif !important;list-style:none;">9. References</li></div>
             </section>
+
             <section data-state="backgroundPage"><h3 style="text-decoration: underline;">Background</h3>
             <div class="container">
                 <ul class="backgroundInfo">
@@ -58,15 +61,16 @@
                     </ul>
 
                 </div>
+                <label style="font-size: 1.25rem; text-align: left;">Source: Schoebel</label>
             </section>
             <section data-state="riskFactorsPage">
             <h3 style="text-decoration: underline;">Risk Factors in Merced County</h3>
             <div class="container">
                 <ul class="riskFactorsList">
                     <li>High agricultural activity increases the likelihood of pathogen spread</li>
-                    <li>Climate conditions such as humidity and temperature can favor pathogen growth</li>
-                    <li>Lack of crop rotation can lead to soil-borne pathogens accumulating</li>
-                    <li>Insufficient monitoring and early detection systems</li>
+                    <li>Climate conditions such as humidity and temperature can favor pathogen growth (Boyd)</li>
+                    <li>Lack of crop rotation can lead to soil-borne pathogens accumulating (Zhou)</li>
+                    <li>Insufficient monitoring and early detection systems (Fickelscherer)</li>
                 </ul>
                 <div id="riskFactorsDiv">
                     <label for="riskFactorsImage">Figure 3: Merced County Almond Orchards</label>
@@ -75,7 +79,6 @@
                 </div>
                 <img src="assets/images/merced_county_overview_farm.jpeg" alt="Merced County Almond Orchards Overview" id="riskFactorsImage" class="overviewImage">
             </div>
-
             </section>
             <section data-state="currentIssuesPage">
             <h3 style="text-decoration: underline;">Current Issues</h3>
@@ -92,6 +95,7 @@
                 </ul>
 
             </div>
+            <label style="font-size: 1.25rem; text-align: left;">Source: Boyd</label>
             </section>
             <section data-state="preventionMeasuresPage">
             <h3 style="text-decoration: underline;">Prevention Measures</h3>
@@ -159,7 +163,11 @@
             <h3 style="text-decoration: underline;">Works Cited</h3>
             <div class="container">
                 <ul class="worksCitedList">
-                <li>Holland, Leslie A., et al. “Fungal Pathogens Associated with Canker Diseases of Almond in California”, <i>The American Phytopathological Society</i>, 23 December 2020, https://doi.org/10.1094/PDIS-10-19-2128-RE, Accessed 13 November 2025.  </li>
+                    <li>Boyd, Lesley A., et al. “Plant–Pathogen Interactions: Disease Resistance in Modern Agriculture.” <i>Trends in Genetics</i>, vol. 29, no. 4, 2013, pp. 233–40, https://doi.org/10.1016/j.tig.2012.10.011.</li>
+                    <li>Fickelscherer, Richard J. <i>Artificial Intelligence in Process Fault Diagnosis: Methods for Plant Surveillance</i>. Wiley-AIChE, 2024, https://doi.org/10.1002/9781119825920. </li>
+                    <li>Holland, Leslie A., et al. “Fungal Pathogens Associated with Canker Diseases of Almond in California”, <i>The American Phytopathological Society</i>, 23 December 2020, https://doi.org/10.1094/PDIS-10-19-2128-RE, Accessed 13 November 2025.  </li>
+                    <li>Schoebel, Corine N et al. “Population History and Pathways of Spread of the Plant Pathogen Phytophthora Plurivora.” <i>PloS one</i> vol. 9,1 e85368. 10 Jan. 2014, doi:10.1371/journal.pone.0085368</li>
+                    <li>Zhou, Xing, et al. “High Carbon Resource Diversity Enhances the Certainty of Successful Plant Pathogen and Disease Control.” <i>The New Phytologist</i>, vol. 237, no. 4, 2023, pp. 1333–46, https://doi.org/10.1111/nph.18582.</li>
                 </ul>
             </div>
             </section>
